--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
+    "nanoid": "^5.0.8",
     "pala-marathon-website": "file:..",
     "zod": "^3.23.8"
   },
