--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "axios": "^1.7.7",
     "pala-marathon-website": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
