--- a/server/package.json
+++ b/server/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  
   "scripts": {
     "dev": "nodemon server.js",
     "start": "nodemon server.js"
@@ -15,6 +16,8 @@
     "express": "^4.21.1",
     "mongoose": "^8.7.2",
     "nanoid": "^5.0.8",
+    "nodemailer": "^6.9.16",
+    "nodemailer-express-handlebars": "^7.0.0",
     "pala-marathon-website": "file:..",
     "zod": "^3.23.8"
   },
