--- a/client/package.json
+++ b/client/package.json
@@ -15,12 +15,14 @@
     "@hookform/resolvers": "^3.9.1",
     "@mui/icons-material": "^6.1.5",
     "@mui/material": "^6.1.5",
+    "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
     "pala-marathon-website": "file:..",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-router-dom": "^6.27.0",
+    "three": "^0.170.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
