--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "start:frontend": "npm --prefix client run dev",
     "start:backend": "npm --prefix server run dev",
     "ci:all": "npm ci --prefix client && npm ci --prefix server"
-
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
     "concurrently": "^9.0.1"
+  },
+  "dependencies": {
+    "react-icons": "^5.3.0"
   }
 }
