--- a/client/package.json
+++ b/client/package.json
@@ -20,6 +20,7 @@
     "leaflet": "^1.9.4",
     "pala-marathon-website": "file:..",
     "react": "^18.3.1",
+    "react-countdown-circle-timer": "^3.2.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.1",
     "react-leaflet": "^4.2.1",
