--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@mui/material": "^6.1.5",
     "@react-three/fiber": "^8.17.10",
     "axios": "^1.7.7",
+    "framer-motion": "^11.11.17",
     "leaflet": "^1.9.4",
     "pala-marathon-website": "file:..",
     "react": "^18.3.1",
