--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,8 +49,7 @@ jobs:
             npm run deploy
             
             # Log the deployment
-            echo "Deployment completed at $(date)"
-EOF
+            echo "Deployment completed at $(date)" EOF
 
       - name: Cleanup
         run: |
