--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "nodemailer": "^6.9.16",
     "nodemailer-express-handlebars": "^7.0.0",
     "pala-marathon-website": "file:..",
+    "qrcode": "^1.5.4",
     "razorpay": "^2.9.5",
     "zod": "^3.23.8"
   },
