--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
+    "googleapis": "^144.0.0",
     "mongoose": "^8.8.3",
     "nanoid": "^5.0.8",
     "nodemailer": "^6.9.16",
