fix: update deployment workflow and modify links on HomePage and RoutePage

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,61 +1,61 @@
-name: Deploy to AWS Lightsail - Pala Marathon Website
+# name: Deploy to AWS Lightsail - Pala Marathon Website
 
-on:
-  push:
-    branches:
-      - deploy
+# on:
+#   push:
+#     branches:
+#       - deploy
 
-jobs:
-  deploy:
-    runs-on: ubuntu-latest
+# jobs:
+#   deploy:
+#     runs-on: ubuntu-latest
 
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4 # Updated to v4 to address Node.js deprecation warning
+#     steps:
+#       - name: Checkout code
+#         uses: actions/checkout@v4 # Updated to v4 to address Node.js deprecation warning
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20" # Explicitly using Node.js 20
+#       - name: Setup Node.js
+#         uses: actions/setup-node@v4
+#         with:
+#           node-version: "20" # Explicitly using Node.js 20
 
-      - name: Configure SSH
-        env:
-          LIGHTSAIL_HOST: ${{ secrets.LIGHTSAIL_HOST }}
-          LIGHTSAIL_USER: ${{ secrets.LIGHTSAIL_USER }}
-        run: |
-          mkdir -p ~/.ssh
-          echo "${{ secrets.LIGHTSAIL_KEY }}" > ~/.ssh/lightsail_key
-          chmod 600 ~/.ssh/lightsail_key
-          ssh-keyscan -H $LIGHTSAIL_HOST >> ~/.ssh/known_hosts
-          chmod 600 ~/.ssh/known_hosts
+#       - name: Configure SSH
+#         env:
+#           LIGHTSAIL_HOST: ${{ secrets.LIGHTSAIL_HOST }}
+#           LIGHTSAIL_USER: ${{ secrets.LIGHTSAIL_USER }}
+#         run: |
+#           mkdir -p ~/.ssh
+#           echo "${{ secrets.LIGHTSAIL_KEY }}" > ~/.ssh/lightsail_key
+#           chmod 600 ~/.ssh/lightsail_key
+#           ssh-keyscan -H $LIGHTSAIL_HOST >> ~/.ssh/known_hosts
+#           chmod 600 ~/.ssh/known_hosts
 
-      - name: Deploy to Lightsail
-        env:
-          LIGHTSAIL_HOST: ${{ secrets.LIGHTSAIL_HOST }}
-          LIGHTSAIL_USER: ${{ secrets.LIGHTSAIL_USER }}
-        run: |
-          ssh -i ~/.ssh/lightsail_key -o StrictHostKeyChecking=accept-new $LIGHTSAIL_USER@$LIGHTSAIL_HOST << 'EOF'
-            set -e  # Exit immediately if a command exits with a non-zero status
+#       - name: Deploy to Lightsail
+#         env:
+#           LIGHTSAIL_HOST: ${{ secrets.LIGHTSAIL_HOST }}
+#           LIGHTSAIL_USER: ${{ secrets.LIGHTSAIL_USER }}
+#         run: |
+#           ssh -i ~/.ssh/lightsail_key -o StrictHostKeyChecking=accept-new $LIGHTSAIL_USER@$LIGHTSAIL_HOST << 'EOF'
+#             set -e  # Exit immediately if a command exits with a non-zero status
 
-            # Load NVM and Node.js
-            export NVM_DIR="$HOME/.nvm"
-            [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # Load nvm
-            nvm use 20  # Use Node.js version 20
+#             # Load NVM and Node.js
+#             export NVM_DIR="$HOME/.nvm"
+#             [ -s "$NVM_DIR/nvm.sh" ] && \. "$NVM_DIR/nvm.sh"  # Load nvm
+#             nvm use 20  # Use Node.js version 20
 
-            # Navigate to repository directory
-            cd repository/Pala-Marathon-Website || exit 1
+#             # Navigate to repository directory
+#             cd repository/Pala-Marathon-Website || exit 1
             
-            # Pull the latest changes
-            git reset --hard
-            git pull origin deploy
+#             # Pull the latest changes
+#             git reset --hard
+#             git pull origin deploy
             
-            # Run the deploy script
-            npm run deploy
+#             # Run the deploy script
+#             npm run deploy
             
-            # Log the deployment
-            echo "Deployment completed at $(date)" EOF
+#             # Log the deployment
+#             echo "Deployment completed at $(date)" EOF
 
-      - name: Cleanup
-        run: |
-          rm -f ~/.ssh/lightsail_key
-          rm -f ~/.ssh/known_hosts
+#       - name: Cleanup
+#         run: |
+#           rm -f ~/.ssh/lightsail_key
+#           rm -f ~/.ssh/known_hosts
